	   a website to a local folder, based on the rsync handler
	maildir:
	 . fixed bug where maildirs that start with a number were skipped.
	 . make deleted maildirs record the date they were deleted
	 . add destid_file configuration option to enable you to specify an alternate
	   ssh public key authentication file (defaulting to /root/.ssh/id_rsa)
	pgsql, mysql, svn:
	 . use new vservers_running function from lib/vserver (factorization++)
	sys:
	 . update for 2.6 kernels: use /proc/kallsyms instead of /proc/ksyms
	   (Closes: Trac#39)
	 . use new vservers_running function from lib/vserver

version 0.9.5 -- December 2, 2007
    backupninja changes
	 . Fixed checks on configuration files permissions, since the patch
	   applied to fix #370396 broke this, especially for configuration files
	   created with permissions 000 by an older ninjahelper version.
	 . Enhanced portability for other platforms
	 . Added quoting because it was needed to prevent shell expansion, broking the
           toint function sometimes (Closes: Trac#11)
	 . Fixed reportspace option (Closes: Trac#10)
	 . Fixed ldap handler not recognizing database suffix (Closes: Trac#28)
    handler changes
	dup:
	 . Support duplicity >= 0.4.3 invocation syntax (--ssh-command option
	   is not supported anymore) (Closes: #447425)
	 . New tmpdir configuration option, very useful in case duplicity tends
	   to fill up /tmp.
        ldap:
	 . Fixed shell command quoting issues, missing 'then' clauses, cleaned up
	   compress=yes to be less redundant and not create empty uncompressed
	   file (Closes: #394935)
	 . Fixed ninjahelper to properly set compress option, standardized on yes/no
	   instead of on/off
	 . Fixed problem that caused combination of slapcat and compress to not work
	   together (Closes: Trac#29)
	 . Applied patch from romain.tartiere@healthgrid.org to fix the SSL/TLS options
	   to be correct, also set TLS to be the default over SSL (Closes: Trac#13)
	maildir: