@@ -35,12 +35,13 @@ version 0.9.6 -- unreleased
 	 . make deleted maildirs record the date they were deleted
 	 . add destid_file configuration option to enable you to specify an alternate
 	   ssh public key authentication file (defaulting to /root/.ssh/id_rsa)
-	pgsql, mysql, svn:
+	pgsql, mysql, svn, sys:
 	 . use new vservers_running function from lib/vserver (factorization++)
 	sys:
 	 . update for 2.6 kernels: use /proc/kallsyms instead of /proc/ksyms
 	   (Closes: Trac#39)
-	 . use new vservers_running function from lib/vserver
+	 . support selection of VServers to run on, in the same way as in the
+	   dup handler, with the new vsnames configuration option ; (Closes: Trac#45)
 
 version 0.9.5 -- December 2, 2007
     backupninja changes
